--- a/index.html
+++ b/index.html
@@ -9,22 +9,33 @@
 </head>
 <body>
     <div class="main">
+        <div class="box box1"></div>
         <div class="box box1">D</div>
         <div class="box box2">O</div>
         <div class="box box3">N</div>
         <div class="box box4">T</div>
+        <div class="box box4"></div>
         <div class="box box5">W</div>
         <div class="box box6">O</div>
         <div class="box box7">R</div>
         <div class="box box8">R</div>
         <div class="box box9">Y</div>
+        <div class="box box10">&#128527;</div>
+        <div class="box box10"></div>
+        <div class="box box10"></div>
         <div class="box box10">B</div>
         <div class="box box11">E</div>
+        <div class="box box10"></div>
+        <div class="box box10"></div>
         <div class="box box12">H</div>
         <div class="box box13">A</div>
         <div class="box box14">P</div>
         <div class="box box15">P</div>
         <div class="box box16">Y</div>
+        <div class="box box10">&#128527</div>
+    </div>
+    <div class="footer">
+    by <span>whevalOS</span>
     </div>
 </body>
 </html>
